# fis_wo

./: CMakeLists.txt  README.md  package.xml
ANFIS_dateset/: FIS_WO_8.csv  FIS_WO_81.csv
ANFIS_output/: ANFIS_WO_sync8_output.csv
launch/: fis_start.launch  wofis_start.launch
scripts/: custom_mf.py  fis_wo.py  fis_wo_node.py  fis_wo_output.py
